<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/bg"
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/Widget.MaterialComponents.Toolbar.Primary">

        <TextView
            android:layout_width="148dp"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:layout_marginStart="14dp"
            android:background="@drawable/know_planets_logo_desc"/>

        <Button
            android:id="@+id/about"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginEnd="14dp"
            android:background="@drawable/ic_baseline_perm_identity_24"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/card"
            android:layout_margin="22dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="10dp"
            app:contentPadding="16dp"
            app:cardElevation="9dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/inputtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/planetname"
                    android:fontFamily="@font/product_sans_medium"
                    android:textColor="@color/material_blue"
                    android:text="@string/input_planet_s_name"
                    android:textSize="24sp"
                    android:textAlignment="center"/>
                
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/planetname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/inputtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/push"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/field"
                    android:padding="10dp"
                    android:hint="@string/planet_s_name"
                    android:textColor="?attr/typing"
                    android:textColorHint="?attr/regularText"/>

                <Button
                    android:id="@+id/push"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/planetname"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/find"
                    android:textSize="16sp"
                    android:backgroundTint="@color/material_blue"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>